# OpenGLStudy

./: .gitignore
01_GFLW_WINDOW/: CMakeLists.txt  main.cpp
02_OpenGL_TryFunctions/: CMakeLists.txt  main.cpp
03_OpenGL_ErrorChecker/: CMakeLists.txt  main.cpp
03_OpenGL_ErrorChecker/wrapper/: checkError.cpp
04_OpenGL_Application/: CMakeLists.txt  glad.c  main.cpp
04_OpenGL_Application/application/: Application.cpp  Application.h  CMakeLists.txt
04_OpenGL_Application/wrapper/: CMakeLists.txt  checkError.h
